A tidy up for Java 17